Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14777

lod: fix E2BIG on create

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

       /usr/lib64/lustre/tests/ha.sh: 07:18:49 1603351129: c-lmo008 Starts: mpiuser: /usr/local/bin/IOR -o /mnt/testfs//ha.sh-217522/c-lmo008-ior/f.ior -f /storage/shared/cslmo11/grev/ssfc-lmo008: lmv_stripe_count: 0 lmv_stripe_offset: 0 lmv_hash_type: nonec-lmo008: /mnt/testfs//ha.sh-217522/c-lmo008-ior
      ...
      c-lmo008: ior ERROR: write(29, 0x7f0c82c47000, 1705984) failed, errno 7, Argument list too long (aiori-POSIX.c:535)c-lmo008: application called MPI_Abort(MPI_COMM_WORLD, -1) - process 2c-lmo008: c-lmo008: ===================================================================================c-lmo008: =   BAD TERMINATION OF ONE OF YOUR APPLICATION PROCESSESc-lmo008: =   EXIT CODE: 255 

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: